[package]
name = "flake-inputs"
version = "0.1.0"
edition = "2021"
authors = ["Adam Gaia"]
description = "Parse flake metadata"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/adam-gaia/flake-input-tools"
repository = "https://github.com/adam-gaia/flake-input-tools"
homepage = "https://github.com/adam-gaia/flake-input-tools"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
directories = "5.0.0"
env_logger = "0.11.0"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
